...
      final token = await remoteGateway.login(username, password);
      final user = await remoteGateway.getUserByUsername(username);
      await localGateway.saveSession(user, token);
      return Right(user);
    } on ServerException {
      return const Left(
        ServerFailure(message: 'Incorrect username or password'
        )
      );
    }on NetworkException {
      return const Left(
        NetworkFailure()
      );
...
      final newUser = await remoteGateway.getUserById(newUserId);
      final token = await remoteGateway.login(newUser.username, newUser.password);
      await localGateway.saveSession(newUser, token);
      return Right(newUser);
    } on ServerException {
      return const Left(
        ServerFailure(message: "Registration could not be completed. The user may already exist")
      );
    }
  }
}
