...
                          text: 'Cancel',
                          onPressed: () {
                            Navigator.of(dialogContext).pop(); 
                          },
                        ),
                        VillaTextButton(
                          text: 'Delete',
                          onPressed: () {
                            Navigator.of(dialogContext).pop();
                            cartViewModel.clearCart();
                          },
                        ),
                      ],
...
            )
        ],
      ),
      body: cartState.items.isEmpty
          ? Center(
              child: Text(
              'Your cart is empty',
              style: typography.h3,
              )
            )
          : Column(
              children: [
                Expanded(
...
