...

    final cartItem = cartState.items.firstWhereOrNull(
      (item) => item.product.id == product.id
    );
    return VillaActionCard(
      elevation: 4,
      actionText: 'Detail',
      onActionPressed: (){
        Navigator.of(context).push(
          MaterialPageRoute(
            builder: (context) => ProductDetailScreen(product: product),
          ),
        );
...
                    Text(
                      '\$${product.price.toStringAsFixed(2)}',
                      style: typography.body,
                    ),
                    cartItem == null
                    ? VillaTextButton(
                        text: 'Add to cart',
                        onPressed: () => cartViewModel.addProduct(product),
                      )
                    : Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          VillaIconButton(
...
